Added modal and fix some bug

--- a/about.html
+++ b/about.html
@@ -84,9 +84,7 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h1 class="h1 fw-bold text-secondary text-danger">
-            Dr. Vaibhav Shankar
-          </h1>
+          <h2 class="h2 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
         </a>
         <button
           class="navbar-toggler"
@@ -99,22 +97,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
-                href="/"
+              <a class="nav-link text-dark text-uppercase fw-semibold" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/about.html"
                 >About</a
               >
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-secondary text-uppercase fw-semibold"
+                class="nav-link dropdown-toggle text-dark text-uppercase fw-semibold"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -132,14 +128,14 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/gallery.html"
                 >Our Gallery</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/contact.html"
                 >Contact Us</a
               >
@@ -184,7 +180,7 @@
           <div class="row g-4">
             <div class="col-md-7 order-2 order-md-1">
               <span
-                class="fw-bold fs-4 text-info border-start border-3 border-danger ps-2"
+                class="fw-bold fs-4 text-primary border-start border-3 border-primary ps-2"
                 >About</span
               >
               <h2 class="display-5 fw-bold">Dr. Vaibhav Shankar</h2>
@@ -229,24 +225,19 @@
             <div class="col-md-5 order-1 order-md-2">
               <img
                 data-aos="fade-left"
-                src="/image/dr.vaibhav2.jpg"
+                src="/image/DR.VAIBHAV6.png"
                 alt="doctor_img"
-                class="img-fluid rounded-3"
+                class="img-fluid rounded-3 img-shadow"
               />
               <div
                 class="d-flex flex-column gap-3 align-items-center bg-white p-2 rounded-3 shadow-lg mt-2"
               >
-                <h2 class="display-6 fw-bold text-info">Dr. Vaibhav Shankar</h2>
-                <ul
-                  class="d-flex align-items-center flex-wrap justify-content-center gap-3"
-                >
-                  <li class="badge text-white bg-danger py-2 px-3">MBBS</li>
-                  <li class="badge text-white bg-danger py-2 px-3">
-                    DNB (Pulmonary Medicine)
-                  </li>
-                  <li class="badge text-white bg-danger py-2 px-3">
-                    Sleep Medicine Expert
-                  </li>
+                <h2 class="fs-3 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
+
+                <ul class="d-flex flex-column gap-2">
+                  <li class="text-secondary px-3">MBBS</li>
+                  <li class="text-secondary px-3">DNB (Pulmonary Medicine)</li>
+                  <li class="text-secondary px-3">Sleep Medicine Expert</li>
                 </ul>
               </div>
             </div>
