--- a/gallery.html
+++ b/gallery.html
@@ -83,9 +83,7 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h1 class="h1 fw-bold text-secondary text-danger">
-            Dr. Vaibhav Shankar
-          </h1>
+          <h2 class="h2 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
         </a>
         <button
           class="navbar-toggler"
@@ -98,22 +96,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
-                href="/"
+              <a class="nav-link text-dark text-uppercase fw-semibold" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/about.html"
                 >About</a
               >
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-secondary text-uppercase fw-semibold"
+                class="nav-link dropdown-toggle text-dark text-uppercase fw-semibold"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -131,14 +127,14 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/gallery.html"
                 >Our Gallery</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/contact.html"
                 >Contact Us</a
               >
