--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h1 class="h1 fw-bold text-secondary text-danger">
-            Dr. Vaibhav Shankar
-          </h1>
+          <h2 class="h2 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
         </a>
         <button
           class="navbar-toggler"
@@ -98,22 +96,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
-                href="/"
+              <a class="nav-link text-dark text-uppercase fw-semibold" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/about.html"
                 >About</a
               >
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-secondary text-uppercase fw-semibold"
+                class="nav-link dropdown-toggle text-dark text-uppercase fw-semibold"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -131,14 +127,14 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/gallery.html"
                 >Our Gallery</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/contact.html"
                 >Contact Us</a
               >
@@ -223,7 +219,7 @@
           <div class="row g-4">
             <div class="col-md-7 order-2 order-md-1">
               <span
-                class="fw-bold fs-4 text-info border-start border-3 border-danger ps-2"
+                class="fw-bold fs-4 text-primary border-start border-3 border-primary ps-2"
                 >About</span
               >
               <h2 class="display-5 fw-bold">Dr. Vaibhav Shankar</h2>
@@ -268,24 +264,19 @@
             <div class="col-md-5 order-1 order-md-2">
               <img
                 data-aos="fade-left"
-                src="/image/dr.vaibhav2.jpg"
+                src="/image/DR.VAIBHAV6.png"
                 alt="doctor_img"
-                class="img-fluid rounded-3"
+                class="img-fluid rounded-3 img-shadow"
               />
               <div
                 class="d-flex flex-column gap-3 align-items-center bg-white p-2 rounded-3 shadow-lg mt-2"
               >
-                <h2 class="display-6 fw-bold text-info">Dr. Vaibhav Shankar</h2>
-                <ul
-                  class="d-flex align-items-center flex-wrap justify-content-center gap-3"
-                >
-                  <li class="badge text-white bg-danger py-2 px-3">MBBS</li>
-                  <li class="badge text-white bg-danger py-2 px-3">
-                    DNB (Pulmonary Medicine)
-                  </li>
-                  <li class="badge text-white bg-danger py-2 px-3">
-                    Sleep Medicine Expert
-                  </li>
+                <h2 class="fs-3 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
+
+                <ul class="d-flex flex-column gap-2">
+                  <li class="text-secondary px-3">MBBS</li>
+                  <li class="text-secondary px-3">DNB (Pulmonary Medicine)</li>
+                  <li class="text-secondary px-3">Sleep Medicine Expert</li>
                 </ul>
               </div>
             </div>
@@ -296,7 +287,7 @@
       <!-- Services Section -->
       <section class="my-4">
         <div class="container">
-          <p class="fs-4 text-info fw-semibold text-center">Services</p>
+          <p class="fs-4 text-primary fw-semibold text-center">Services</p>
           <h2 class="fs-1 fw-bold text-center">Excellent Heartcare Services</h2>
 
           <div class="row g-4 my-3">
@@ -309,13 +300,13 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Coronary Angiography</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Coronary Angiography</h3>
                 <p class="text-secondary mb-4 p-2">
                   Angiography is a medical imaging technique that is used to
                   visualize the inside of arteries..
                 </p>
                 <a href="/service-details.html" class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
+                  <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
             </div>
@@ -329,32 +320,32 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Peripheral Angioplasty</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Peripheral Angioplasty</h3>
                 <p class="text-secondary mb-4 p-2">
                   Peripheral artery disease,alsoreferred to as peripheral
                   arterial disease.
                 </p>
                 <a href="/service-details.html" class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
+                  <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-card bg-light text-center h-100">
-                <div class="service-img-wrapper mb-4">
+                <div class="service-img-wrapper mb-2">
                   <img
                     src="./image/approach-3.jpeg"
                     alt="Peripheral Angioplasty"
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Cardiac Catheterization</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Cardiac Catheterization</h3>
                 <p class="text-secondary mb-4 p-2">
                   Cardiac catheterization (kath-uh- tur-ih-ZAY-shun) is a
                   procedure used to diagnose and treat cardiova
                 </p>
-                <a href="/service-details.html" class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
             </div>
@@ -368,13 +359,13 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Electrophysiology</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Electrophysiology</h3>
                 <p class="text-secondary mb-4 p-2">
                   Coronary bypass surgery is a procedure that restores blood
                   flow to your heart muscle by diverting the
                 </p>
-                <a href="/service-details.html" class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
             </div>
@@ -387,13 +378,13 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">CPacemaker Implantation</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">CPacemaker Implantation</h3>
                 <p class="text-secondary mb-4 p-2">
                   The purpose of your heart is to pump blood to the organs and
                   tissues of your body that need the oxyg
                 </p>
-                <a href="/service-details.html" class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
             </div>
@@ -406,18 +397,24 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">
+                <h3 class="fs-4 mb-2 fw-semibold">
                   Balloon Mitral Valvuloplasty
                 </h3>
                 <p class="text-secondary mb-4 p-2">
                   Percutaneous balloon mitral valvuloplasty (BMV) is an
                   effective and safe method in treating rheumati
                 </p>
-                <a href="/service-details.html" class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
             </div>
+          </div>
+
+          <div class="text-center mt-5">
+            <a href="/services.html" class="btn btn-primary btn-lg px-4">
+              View All Services <i class="fas fa-arrow-right ms-2"></i>
+            </a>
           </div>
         </div>
       </section>
@@ -449,7 +446,10 @@
       <!-- Our Approach Section -->
       <section class="my-5">
         <div class="container">
-          <span class="text-info fs-4 fw-semibold">OUR APPROACH</span>
+          <span
+            class="text-primary fs-4 fw-semibold border-start border-2 border-primary ps-2"
+            >OUR APPROACH</span
+          >
           <div class="row">
             <div class="col-lg-6">
               <h2 class="display-5 fw-bold mb-4">
@@ -463,7 +463,7 @@
               </p>
 
               <div class="approach-points">
-                <div class="d-flex align-items-start gap-3 mb-3">
+                <div class="d-flex align-items-start gap-3 mb-2">
                   <i class="fa-solid fa-circle-check text-info fs-5 mt-1"></i>
                   <div>
                     <h5 class="fw-bold mb-2">Evidence-based treatments</h5>
@@ -548,7 +548,7 @@
       <!-- Gallery Section -->
       <section class="py-5">
         <div class="container">
-          <p class="fs-4 text-info fw-semibold text-center">Our Gallery</p>
+          <p class="fs-4 text-primary fw-semibold text-center">Our Gallery</p>
           <h2 class="fs-1 fw-bold text-center mb-5">
             Latest Medical Care Gallery
           </h2>
