--- a/services.html
+++ b/services.html
@@ -81,9 +81,7 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h1 class="h1 fw-bold text-secondary text-danger">
-            Dr. Vaibhav Shankar
-          </h1>
+          <h2 class="h2 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
         </a>
         <button
           class="navbar-toggler"
@@ -96,22 +94,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
-                href="/"
+              <a class="nav-link text-dark text-uppercase fw-semibold" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/about.html"
                 >About</a
               >
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-secondary text-uppercase fw-semibold"
+                class="nav-link dropdown-toggle text-dark text-uppercase fw-semibold"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -129,14 +125,14 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/gallery.html"
                 >Our Gallery</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-secondary text-uppercase fw-semibold"
+                class="nav-link text-dark text-uppercase fw-semibold"
                 href="/contact.html"
                 >Contact Us</a
               >
@@ -175,7 +171,7 @@
     <main>
       <section class="my-4">
         <div class="container">
-          <p class="fs-4 text-info fw-semibold text-center">Services</p>
+          <p class="fs-4 text-primary fw-semibold text-center">Services</p>
           <h2 class="fs-1 fw-bold text-center">Excellent Heartcare Services</h2>
 
           <div class="row g-4 my-3">
@@ -188,14 +184,14 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Coronary Angiography</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Coronary Angiography</h3>
                 <p class="text-secondary mb-4 p-2">
                   Angiography is a medical imaging technique that is used to
                   visualize the inside of arteries..
                 </p>
-                <div class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
-                </div>
+                <a href="/service-details.html" class="service-link">
+                  <button class="btn btn-outline-primary">Know more</button>
+                </a>
               </div>
             </div>
 
@@ -208,33 +204,33 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Peripheral Angioplasty</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Peripheral Angioplasty</h3>
                 <p class="text-secondary mb-4 p-2">
                   Peripheral artery disease,alsoreferred to as peripheral
                   arterial disease.
                 </p>
-                <div class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
-                </div>
+                <a href="/service-details.html" class="service-link">
+                  <button class="btn btn-outline-primary">Know more</button>
+                </a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-card bg-light text-center h-100">
-                <div class="service-img-wrapper mb-4">
+                <div class="service-img-wrapper mb-2">
                   <img
                     src="./image/approach-3.jpeg"
                     alt="Peripheral Angioplasty"
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Cardiac Catheterization</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Cardiac Catheterization</h3>
                 <p class="text-secondary mb-4 p-2">
                   Cardiac catheterization (kath-uh- tur-ih-ZAY-shun) is a
                   procedure used to diagnose and treat cardiova
                 </p>
-                <div class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
-                </div>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
+                </a>
               </div>
             </div>
             <!-- Continue with other service cards following the same pattern -->
@@ -247,14 +243,14 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">Electrophysiology</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">Electrophysiology</h3>
                 <p class="text-secondary mb-4 p-2">
                   Coronary bypass surgery is a procedure that restores blood
                   flow to your heart muscle by diverting the
                 </p>
-                <div class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
-                </div>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
+                </a>
               </div>
             </div>
             <div class="col-md-4">
@@ -266,14 +262,14 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">CPacemaker Implantation</h3>
+                <h3 class="fs-4 mb-2 fw-semibold">CPacemaker Implantation</h3>
                 <p class="text-secondary mb-4 p-2">
                   The purpose of your heart is to pump blood to the organs and
                   tissues of your body that need the oxyg
                 </p>
-                <div class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
-                </div>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
+                </a>
               </div>
             </div>
             <div class="col-md-4">
@@ -285,16 +281,16 @@
                     class="img-fluid"
                   />
                 </div>
-                <h3 class="fs-4 mb-3 fw-semibold">
+                <h3 class="fs-4 mb-2 fw-semibold">
                   Balloon Mitral Valvuloplasty
                 </h3>
                 <p class="text-secondary mb-4 p-2">
                   Percutaneous balloon mitral valvuloplasty (BMV) is an
                   effective and safe method in treating rheumati
                 </p>
-                <div class="service-link">
-                  <i class="fa-solid fa-arrow-right text-primary"></i>
-                </div>
+                <a href="/service-details.html" class="service-link mb-2">
+                  <button class="btn btn-outline-primary">Know more</button>
+                </a>
               </div>
             </div>
           </div>
