Created Why Choose Section

--- a/index.html
+++ b/index.html
@@ -419,6 +419,129 @@
         </div>
       </section>
 
+      <!-- Why Choose Us Section -->
+      <section class="why-choose-section py-5 bg-light">
+        <div class="container">
+          <div class="section-header text-center mb-5">
+            <span class="subtitle fs-4 text-primary fw-semibold mb-2 d-block"
+              >Why Choose Us</span
+            >
+            <h2 class="display-6 fw-bold mb-3">
+              Exceptional Healthcare, Trusted Experience
+            </h2>
+            <p class="text-secondary lead mx-auto" style="max-width: 700px">
+              We combine medical excellence with advanced technology and
+              compassionate care to provide you with the best possible treatment
+              outcomes.
+            </p>
+          </div>
+
+          <div class="row g-4">
+            <div class="col-md-4">
+              <div
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                data-aos="fade-up"
+              >
+                <div class="icon-wrapper mb-4">
+                  <i class="fas fa-user-md display-5 text-primary"></i>
+                </div>
+                <h3 class="h4 mb-3">Expert Medical Team</h3>
+                <p class="text-secondary mb-0">
+                  Our team of highly qualified medical professionals brings
+                  years of experience and specialized expertise to provide
+                  comprehensive care.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
+                <div class="icon-wrapper mb-4">
+                  <i class="fas fa-clock display-5 text-primary"></i>
+                </div>
+                <h3 class="h4 mb-3">24/7 Emergency Care</h3>
+                <p class="text-secondary mb-0">
+                  Round-the-clock emergency services with immediate response
+                  times and dedicated emergency medical staff.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                data-aos="fade-up"
+                data-aos-delay="200"
+              >
+                <div class="icon-wrapper mb-4">
+                  <i class="fas fa-microscope display-5 text-primary"></i>
+                </div>
+                <h3 class="h4 mb-3">Advanced Technology</h3>
+                <p class="text-secondary mb-0">
+                  State-of-the-art medical equipment and modern facilities to
+                  ensure accurate diagnosis and effective treatment.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                data-aos="fade-up"
+                data-aos-delay="300"
+              >
+                <div class="icon-wrapper mb-4">
+                  <i class="fas fa-heart display-5 text-primary"></i>
+                </div>
+                <h3 class="h4 mb-3">Patient-Centered Care</h3>
+                <p class="text-secondary mb-0">
+                  Personalized treatment plans tailored to each patient's unique
+                  needs with a focus on comfort and recovery.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                data-aos="fade-up"
+                data-aos-delay="400"
+              >
+                <div class="icon-wrapper mb-4">
+                  <i class="fas fa-certificate display-5 text-primary"></i>
+                </div>
+                <h3 class="h4 mb-3">Accredited Facility</h3>
+                <p class="text-secondary mb-0">
+                  Internationally recognized healthcare standards with a
+                  commitment to quality and safety protocols.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                data-aos="fade-up"
+                data-aos-delay="500"
+              >
+                <div class="icon-wrapper mb-4">
+                  <i class="fas fa-comments display-5 text-primary"></i>
+                </div>
+                <h3 class="h4 mb-3">Clear Communication</h3>
+                <p class="text-secondary mb-0">
+                  Open dialogue between doctors and patients, ensuring you
+                  understand your treatment plan every step of the way.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Stats Section -->
       <section class="py-5 text-white my-5" id="stats-section">
         <div class="container">
