Replace carousel with banner

--- a/services.html
+++ b/services.html
@@ -60,15 +60,15 @@
             </div>
           </div>
           <div
-            class="col-md-4 d-flex align-items-center gap-3 justify-content-end"
+            class="col-md-4 d-flex align-items-center gap-5 justify-content-end"
           >
-            <div class="d-flex flex-colmun align-items-center gap-3">
-              <i class="fa-brands fa-square-facebook text-light"></i>
-              <i class="fa-brands fa-square-x-twitter text-light"></i>
-              <i class="fa-brands fa-square-pinterest text-light"></i>
-              <i class="fa-brands fa-linkedin text-light"></i>
-            </div>
             <a href="/contact.html" id="free-btn">Free Consultation</a>
+            <div class="d-flex flex-colmun align-items-center gap-3">
+              <i class="fa-brands fa-square-facebook text-light fs-5"></i>
+              <i class="fa-brands fa-square-x-twitter text-light fs-5"></i>
+              <i class="fa-brands fa-square-pinterest text-light fs-5"></i>
+              <i class="fa-brands fa-linkedin text-light fs-5"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h2 class="h2 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
+          <h2 class="fs-4 fw-bold logo">Dr. Vaibhav Shankar</h2>
         </a>
         <button
           class="navbar-toggler"
