--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             </div>
           </div>
           <div
-            class="col-md-4 d-flex align-items-center gap-3 justify-content-end"
+            class="col-md-4 d-flex align-items-center gap-5 justify-content-end"
           >
-            <div class="d-flex flex-colmun align-items-center gap-3">
-              <i class="fa-brands fa-square-facebook text-light"></i>
-              <i class="fa-brands fa-square-x-twitter text-light"></i>
-              <i class="fa-brands fa-square-pinterest text-light"></i>
-              <i class="fa-brands fa-linkedin text-light"></i>
-            </div>
             <a href="/contact.html" id="free-btn">Free Consultation</a>
+            <div class="d-flex flex-colmun align-items-center gap-3">
+              <i class="fa-brands fa-square-facebook text-light fs-5"></i>
+              <i class="fa-brands fa-square-x-twitter text-light fs-5"></i>
+              <i class="fa-brands fa-square-pinterest text-light fs-5"></i>
+              <i class="fa-brands fa-linkedin text-light fs-5"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
       <div class="container d-flex align-items-center justify-content-between">
         <a class="navbar-brand" href="/">
           <!-- <img src="./Img/ca-logo.png" alt="Logo" /> -->
-          <h2 class="h2 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
+          <h2 class="fs-4 fw-bold logo">Dr. Vaibhav Shankar</h2>
         </a>
         <button
           class="navbar-toggler"
@@ -147,40 +147,24 @@
     <!-- Main Content -->
     <main class="overflow-hidden">
       <!-- Hero Section -->
-      <section class="d-none d-md-block hero-carousel">
-        <div class="owl-carousel owl-theme hero-slider">
-          <div class="item">
-            <img src="./image/hero-bg1.webp" alt="Home Slide 1" />
-            <div class="carousel-content">
-              <h1 class="display-2 fw-bold">Healthy Hearts Clinic</h1>
-              <p>Your Trusted Hearts Clinic</p>
-              <div
-                class="d-flex align-items-center justify-content-start gap-3"
+      <section class="d-none d-md-block hero-banner">
+        <div class="container w-100 h-100 d-flex align-items-center">
+          <div class="banner-content">
+            <h1 class="display-2 fw-bold text-white">Dr. Vaibhav Shankar</h1>
+            <p class="fw-semibold">
+              Specialized Cardiac Care for Your Heart Health
+            </p>
+            <div class="d-flex align-items-center justify-content-start gap-3">
+              <a
+                href="/contact.html"
+                class="carousel-btn1 text-uppercase fw-semibold"
+                >Contact Us</a
               >
-                <a href="/contact.html" class="carousel-btn1 text-uppercase"
-                  >Contact Us</a
-                >
-                <a href="/about.html" class="carousel-btn2 text-uppercase"
-                  >Know More</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <img src="./image/hero-bg1.webp" alt="Home Slide 2" />
-            <div class="carousel-content">
-              <h1 class="display-2 fw-bold">Advanced Cardiac Care</h1>
-              <p>Specialized Cardiac Care for Your Heart Health</p>
-              <div
-                class="d-flex align-items-center justify-content-start gap-3"
+              <a
+                href="/about.html"
+                class="carousel-btn2 text-uppercase fw-semibold"
+                >Know More</a
               >
-                <a href="/contact.html" class="carousel-btn1 text-uppercase"
-                  >Contact Us</a
-                >
-                <a href="/about.html" class="carousel-btn2 text-uppercase"
-                  >Know More</a
-                >
-              </div>
             </div>
           </div>
         </div>
