--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </section>
 
       <!-- Hero Section on mobile device -->
-      <section class="d-md-none my-2 hero-phone">
+      <!-- <section class="d-md-none my-2 hero-phone">
         <div class="container">
           <div class="w-100 d-flex flex-column gap-3">
             <div class="doctor-img rounded-3 overflow-hidden shadow-lg">
@@ -196,7 +196,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- About Section -->
       <section class="my-5">
         <div class="container">
@@ -255,7 +255,11 @@
               <div
                 class="d-flex flex-column gap-3 align-items-center bg-white p-2 rounded-3 shadow-lg mt-2"
               >
-                <h2 class="fs-3 fw-bold text-primary">Dr. Vaibhav Shankar</h2>
+                <h2
+                  class="fs-3 fw-bold text-decoration-underline link-offset-2"
+                >
+                  Dr. Vaibhav Shankar
+                </h2>
 
                 <ul class="d-flex flex-column gap-2">
                   <li class="text-secondary px-3">MBBS</li>
@@ -289,7 +293,7 @@
                   Angiography is a medical imaging technique that is used to
                   visualize the inside of arteries..
                 </p>
-                <a href="/service-details.html" class="service-link">
+                <a href="/service-details.html" class="service-link mb-2">
                   <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
@@ -309,7 +313,7 @@
                   Peripheral artery disease,alsoreferred to as peripheral
                   arterial disease.
                 </p>
-                <a href="/service-details.html" class="service-link">
+                <a href="/service-details.html" class="service-link mb-2">
                   <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
@@ -423,7 +427,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div
-                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-lg"
                 data-aos="fade-up"
               >
                 <div class="icon-wrapper mb-4">
@@ -440,7 +444,7 @@
 
             <div class="col-md-4">
               <div
-                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-lg"
                 data-aos="fade-up"
                 data-aos-delay="100"
               >
@@ -457,7 +461,7 @@
 
             <div class="col-md-4">
               <div
-                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-lg"
                 data-aos="fade-up"
                 data-aos-delay="200"
               >
@@ -474,7 +478,7 @@
 
             <div class="col-md-4">
               <div
-                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-lg"
                 data-aos="fade-up"
                 data-aos-delay="300"
               >
@@ -491,7 +495,7 @@
 
             <div class="col-md-4">
               <div
-                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-lg"
                 data-aos="fade-up"
                 data-aos-delay="400"
               >
@@ -508,7 +512,7 @@
 
             <div class="col-md-4">
               <div
-                class="choose-card h-100 p-4 bg-white rounded-3 shadow-sm"
+                class="choose-card h-100 p-4 bg-white rounded-3 shadow-lg"
                 data-aos="fade-up"
                 data-aos-delay="500"
               >
@@ -802,7 +806,7 @@
                 <h3>SUPPORT</h3>
                 <p class="text-white">
                   incididunt ut lab dolore magna aliqua, consectetur elit,sed
-                  eiusmod tempor Lorem ipsum dolor.
+                  eiulgod tempor Lorem ipsum dolor.
                 </p>
               </div>
             </div>
@@ -994,7 +998,7 @@
 
       <!-- Footer -->
       <footer class="footer-section">
-        <div class="container text-center text-lg-start">
+        <div class="container">
           <div class="row gy-4">
             <div class="col-lg-3">
               <div class="footer-widget">
@@ -1044,33 +1048,27 @@
               <div class="footer-widget">
                 <h2 class="h4 mb-4 text-primary fw-bold">Get In Touch</h2>
                 <div class="contact-info">
-                  <div
-                    class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
-                  >
+                  <div class="d-flex align-items-start gap-3 mb-3">
                     <div class="contact-icon">
                       <i class="fas fa-location-dot"></i>
                     </div>
                     <p class="mb-0">Dr. Vaibhav Shankar</p>
                   </div>
-                  <div
-                    class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
-                  >
+                  <div class="d-flex align-items-start gap-3 mb-3">
                     <div class="contact-icon">
                       <i class="fas fa-phone"></i>
                     </div>
                     <p class="mb-0">
-                      <a href="tel:+91-7487935974">+91-7487935974</a>
+                      <a href="tel:+91-7633940407">+91-7633940407</a>
                     </p>
                   </div>
-                  <div
-                    class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3"
-                  >
+                  <div class="d-flex align-items-start gap-3">
                     <div class="contact-icon">
                       <i class="fas fa-envelope"></i>
                     </div>
                     <p class="mb-0">
                       <a href="mailto:aryavratcd@gmail.com"
-                        >dr.vaibhav@gmail.com</a
+                        >aryavratcd@gmail.com</a
                       >
                     </p>
                   </div>
@@ -1084,9 +1082,7 @@
                   Stay connected with us on social media for updates, health
                   tips, and more.
                 </p>
-                <div
-                  class="social-links justify-content-center justify-content-lg-start"
-                >
+                <div class="social-links">
                   <a href="#" class="social-icon"
                     ><i class="fab fa-facebook-f"></i
                   ></a>
