--- a/services.html
+++ b/services.html
@@ -189,7 +189,7 @@
                   Angiography is a medical imaging technique that is used to
                   visualize the inside of arteries..
                 </p>
-                <a href="/service-details.html" class="service-link">
+                <a href="/service-details.html" class="service-link mb-2">
                   <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
@@ -209,7 +209,7 @@
                   Peripheral artery disease,alsoreferred to as peripheral
                   arterial disease.
                 </p>
-                <a href="/service-details.html" class="service-link">
+                <a href="/service-details.html" class="service-link mb-2">
                   <button class="btn btn-outline-primary">Know more</button>
                 </a>
               </div>
@@ -300,7 +300,7 @@
 
     <!-- Footer -->
     <footer class="footer-section">
-      <div class="container text-center text-lg-start">
+      <div class="container">
         <div class="row gy-4">
           <div class="col-lg-3">
             <div class="footer-widget">
@@ -348,33 +348,27 @@
             <div class="footer-widget">
               <h2 class="h4 mb-4 text-primary fw-bold">Get In Touch</h2>
               <div class="contact-info">
-                <div
-                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
-                >
+                <div class="d-flex align-items-start gap-3 mb-3">
                   <div class="contact-icon">
                     <i class="fas fa-location-dot"></i>
                   </div>
                   <p class="mb-0">Dr. Vaibhav Shankar</p>
                 </div>
-                <div
-                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3 mb-3"
-                >
+                <div class="d-flex align-items-start gap-3 mb-3">
                   <div class="contact-icon">
                     <i class="fas fa-phone"></i>
                   </div>
                   <p class="mb-0">
-                    <a href="tel:+91-7487935974">+91-7487935974</a>
+                    <a href="tel:+91-7633940407">+91-7633940407</a>
                   </p>
                 </div>
-                <div
-                  class="d-flex align-items-start justify-content-center justify-content-lg-start gap-3"
-                >
+                <div class="d-flex align-items-start gap-3">
                   <div class="contact-icon">
                     <i class="fas fa-envelope"></i>
                   </div>
                   <p class="mb-0">
                     <a href="mailto:aryavratcd@gmail.com"
-                      >dr.vaibhav@gmail.com</a
+                      >aryavratcd@gmail.com</a
                     >
                   </p>
                 </div>
@@ -388,9 +382,7 @@
                 Stay connected with us on social media for updates, health tips,
                 and more.
               </p>
-              <div
-                class="social-links justify-content-center justify-content-lg-start"
-              >
+              <div class="social-links">
                 <a href="#" class="social-icon"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
